--- a/restaurantes.html
+++ b/restaurantes.html
@@ -14,7 +14,7 @@
        <a href="https://www.facebook.com/lavarandavha/?locale=pt_BR">La varanda</a> <br>
        <a href="https://www.instagram.com/s.kamoto_vilhena/">Skamoto</a> <br>
        <a href="https://www.instagram.com/chiquinhovilhena/">Chiquinho</a> <br>
-       <a href="https://www.facebook.com/ChurrascariaBodanese/?locale=pt_BR">Churrascaria Bodanese</a> <br>
+       <a href="https://www.instagram.com/italianapizzariaoficial/">Pizzaria Italiana</a> <br>
        <a href="https://www.instagram.com/degustare.restaurante/">Degustare</a> <br>
       
     
