--- a/visita.html
+++ b/visita.html
@@ -1,4 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <html>
   <head>
   </head>
     <body>
@@ -6,3 +14,5 @@
 
       <h1>Aqui ficará a Galeria de Fotos</h1><br>
     </body>
+</body>
+</html>
