--- a/visitacolorado.html
+++ b/visitacolorado.html
@@ -23,7 +23,7 @@
     </div>
 
         <div class="gallery">
-            <img src="/imagens/imagem1.jpg" alt="Imagem 1" onclick="openModal('/imagens/imagem1.jpg')">
+            <img src="imagens/imagem1.jpg" alt="Imagem 1" onclick="openModal('/imagens/imagem1.jpg')">
             <img src="/imagens/imagem2.jpg" alt="Imagem 2" onclick="openModal('/imagens/imagem2.jpg')">
             <img src="/imagens/imagem3.jpg" alt="Imagem 3" onclick="openModal('/imagens/imagem3.jpg')">
             <img src="/imagens/imagem4.jpg" alt="Imagem 4" onclick="openModal('/imagens/imagem4.jpg')">
