--- a/visitacolorado.html
+++ b/visitacolorado.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="tudo">
-        <img src="/imagens/onibus" alt="" width="100">
+        <img src="imagens/onibus" alt="" width="100">
         <h1>Visita Técnica</h1><br>
         <h3>RELATÓRIO VISITA:</h3>
 
