--- a/visitacolorado.html
+++ b/visitacolorado.html
@@ -24,16 +24,16 @@
     </div>
 
         <div class="gallery">
-            <img src="imagens/imagem1.jpg" alt="Imagem 1" onclick="openModal('/imagens/imagem1.jpg')">
-            <img src="imagens/imagem2.jpg" alt="Imagem 2" onclick="openModal('/imagens/imagem2.jpg')">
-            <img src="imagens/imagem3.jpg" alt="Imagem 3" onclick="openModal('/imagens/imagem3.jpg')">
-            <img src="imagens/imagem4.jpg" alt="Imagem 4" onclick="openModal('/imagens/imagem4.jpg')">
-            <img src="imagens/imagem5.jpg" alt="Imagem 5" onclick="openModal('/imagens/imagem5.jpg')">
+            <img src="imagens/imagem1.jpg" alt="Imagem 1" onclick="openModal('imagens/imagem1.jpg')">
+            <img src="imagens/imagem2.jpg" alt="Imagem 2" onclick="openModal('imagens/imagem2.jpg')">
+            <img src="imagens/imagem3.jpg" alt="Imagem 3" onclick="openModal('imagens/imagem3.jpg')">
+            <img src="imagens/imagem4.jpg" alt="Imagem 4" onclick="openModal('imagens/imagem4.jpg')">
+            <img src="imagens/imagem5.jpg" alt="Imagem 5" onclick="openModal('imagens/imagem5.jpg')">
             <img src="imagens/imagem6.jpg" alt="Imagem 6" onclick="openModal('imagens/imagem6.jpg')">
-            <img src="imagens/imagem7.jpg" alt="Imagem 7" onclick="openModal('/imagens/imagem7.jpg')">
+            <img src="imagens/imagem7.jpg" alt="Imagem 7" onclick="openModal('imagens/imagem7.jpg')">
             <img src="imagens/imagem8.jpg" alt="Imagem 8" onclick="openModal('imagens/imagem8.jpg')">
             <img src="imagens/imagem9.jpg" alt="Imagem 9" onclick="openModal('imagens/imagem9.jpg')">
-            <img src="imagens/imagem10.jpg" alt="Imagem 10" onclick="openModal('/imagens/imagem10.jpg')">
+            <img src="imagens/imagem10.jpg" alt="Imagem 10" onclick="openModal('imagens/imagem10.jpg')">
         </div>
         
         <div id="myModal" class="modal">
